--- a/Radar/radarChart.html
+++ b/Radar/radarChart.html
@@ -22,7 +22,8 @@
   </head>
   <body>
     <div id="body">
-	  <div id="chart"></div>
+		<div id="cota"></div>
+		<div id="spider"></div>
     </div>
 	
     <script type="text/javascript" src="script.js"></script>
