--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 
 	<title>Mortalidad materna</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="/Mapa/style.css">
+	<link rel="stylesheet" type="text/css" href="	Mapa/style.css">
 
 	<script src="d3/d3.v3.min.js" charset="utf-8"></script>
 	<script src="d3/topojson.v0.min.js"></script>
+	<script src="Radar/radarChart.js"></script>
 
 </head>
 
 <body>
 	<div id="content">
-		<div id="header">TÍTULO</div>
+		<div id="header">
+		</div>
 		<div class="content_intro">
-			<div class="img_intro">IMAGEN</div>
-			<div class="text_intro">TEXTO DE INTRO</div>
+			<img src="img/HEADER1.png">
 		</div>
 		<div class="content_intro">
 			<div class="img_intro">IMAGEN</div>
@@ -26,12 +27,16 @@
 			<div class="img_intro">IMAGEN</div>
 			<div class="text_intro">TEXTO DE INTRO</div>
 		</div>
+		
 		<div id="content_map">
+			<div class="title">
+			¿QUÉ MUJERES <b>ESTÁN MURIENDO</b>?
+		</div>
 			<div>
 				<div id="menu">
 					
 					<div class="div_select">
-						<labe>Datos generales</label>
+						<label class="general_font">GENERAL</label>
 						<select class="menu_select" id="general">
 							<option>opcion 1</option>
 							<option>opcion 2</option>
@@ -40,7 +45,7 @@
 					</div>
 
 					<div class="div_select">
-						<labe>Perfil de la mujer</label>
+						<label class="mujeres_font">MUJERES</label>
 						<select class="menu_select" id="general">
 							<option>opcion 1</option>
 							<option>opcion 2</option>
@@ -49,7 +54,7 @@
 					</div>
 
 					<div class="div_select">
-						<labe>Calidad del servicio médico</label>
+						<label class="atencion_font">ATENCIÓN</label>
 						<select class="menu_select" id="general">
 							<option>opcion 1</option>
 							<option>opcion 2</option>
@@ -58,35 +63,40 @@
 					</div>
 
 				</div>
-				<div id="filter">
 
-					<div class="div_select_edo">
-						<labe>Estado:</label>
-						<select class="menu_select" id="general">
-							<option>Edo 1</option>
-							<option>Edo 2</option>
-							<option>Edo 3</option>
-						</select>
-					</div>
-
-					<div class="div_select_edo">
-						<labe>Municipio:</label>
-						<select class="menu_select" id="general">
-							<option>Mun 1</option>
-							<option>Mun 2</option>
-							<option>Mun 3</option>
-						</select>
-					</div>
-
-				</div>
 			</div>
 			<div id="map" class="map"></div>
+			<div id="filter">
+
+				<div class="div_select_edo">
+					<labe>Estado:</label>
+					<select class="menu_select" id="general">
+						<option>Edo 1</option>
+						<option>Edo 2</option>
+						<option>Edo 3</option>
+					</select>
+				</div>
+
+				<div class="div_select_edo">
+					<labe>Municipio:</label>
+					<select class="menu_select" id="general">
+						<option>Mun 1</option>
+						<option>Mun 2</option>
+						<option>Mun 3</option>
+					</select>
+				</div>
+
+			</div>
 			<div id="info">INFO_MAPA</div>
 		</div>
 		<div id="content_spider">
-			<div id="spider">GRÁFICO DE SPIDER</div>
+			<div class="title">
+			¿CUÁLES SON LAS <b>CAUSAS</b> DE ESTAS <b>MUERTES</b>?
+			</div>
+			<div id="spider"></div>
 			<div id="spider_info">INFO DE SPIDER</div>
 		</div>
+		<script src="Radar/script.js"></script>
 		<div id="footer">footer</div>
 	</div>
 </body>
